--- a/cities.vcxproj
+++ b/cities.vcxproj
@@ -174,6 +174,10 @@
     <Text Include="inp9.txt" />
     <Text Include="input.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="city.cd" />
+    <None Include="tourists.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
